Fixed visibility issues with contact form

--- a/style.css
+++ b/style.css
@@ -719,7 +719,7 @@ figure:hover figcaption {
     resize: none;
 }
 
-button {
+.btn {
     border-radius: 0 !important;
 }
 
@@ -729,6 +729,7 @@ button {
 }
 
 .contact-form {
+    margin-top: 85px;
     margin-left: 75px;
 }
 
@@ -743,6 +744,7 @@ button {
     }
 
     .contact-form {
+        margin-top: 0px;
         margin-left: 20px;
     }
 
